Adds Query Parameters To GET /profile
Adds two different query parameters to the GET /profile endpoint. These parameters control what information is included in the response. Now, by default, only the balance and name of the user will be included. You can toggle the inventory and plots information using the 'include_inventory' and 'include_plots' query parameters respectively.
